#########################################################################
#									#
# Script ID: src/prg/c/inc-tmp/Makefile.am				#
# Author: Copyright (C) 2017-2019, 2021, 2022  Mark Grant		#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
#	AutoMake script file to produce temporary headers.		#
#									#
# For example. Temporary headers can be used in development by a 	#
# library package to house, modify and use copies of an include file	#
# which is normally part of a -dev package. At the end of development	#
# this, of course, has to be moved back to the -dev package and		#
# released from there.							#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 23/04/2017	MG	1.0.0	First release.				#
# 01/01/2018	MG	1.0.1	Add SPDX license tags to source files.	#
# 02/01/2018	MG	1.0.2	Move to new source directory structure.	#
# 16/05/2019	MG	1.0.3	Collapse AT sub-projects into one.	#
#				Remove shebang.				#
# 06/12/2021	MG	1.0.4	Tighten SPDX tag.			#
# 11/09/2022	MG	1.0.5	Rename configfile.h			#
#									#
#########################################################################


noinst_HEADERS = $(tmpheaders)

EXTRA_HEADERS = mge-configfile.h remsyslog.h libmgesysutils.h

