#########################################################################
#									#
# Script ID: src/prg/c/lib-tmp/Makefile.am				#
# Author: Copyright (C) 2017-2019, 2021  Mark Grant			#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
#	AutoMake script file to provide AutoTools support for temporary	#
# libraries.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 09/06/2017	MG	1.0.0	First release.				#
# 28/10/2017	MG	1.0.1	Add libmgec.				#
# 01/01/2018	MG	1.0.2	Add SPDX license tags to source files.	#
# 02/01/2018	MG	1.0.3	Move to new source directory structure.	#
# 16/05/2019	MG	1.0.4	Collapse AT sub-projects into one.	#
#				Remove shebang.				#
# 06/12/2021	MG	1.0.5	Tighten SPDX tag.			#
#									#
#########################################################################


EXTRA_DIST = $(srcdir)/libmgec

