#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: lib/source/progs/c/sysgen/inc/Makefile.am			#
# Author: Copyright (C) 2015-2018  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to produce system generated headers.	#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 14/04/2015	MG	1.0.1	First release.				#
# 23/06/2015	MG	1.0.2	Change to noinst as previous was	#
#				installing config.h			#
# 25/10/2015	MG	1.0.3	Restructure and change to conform to	#
#				AutoTools General Template v1.0.6.	#
# 16/11/2016	MG	1.0.4	Tidy file header comments.		#
# 01/01/2018	MG	1.0.5	Add SPDX license tags to source files.	#
# 02/01/2018	MG	1.0.6	Move to new source directory structure.	#
#									#
#########################################################################

noinst_HEADERS = config.h
