#########################################################################
#									#
# Author: Copyright (C) 2015-2019, 2021-2023  Mark Grant		#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
#	AutoMake script file to generate libmgesysutils headers from	#
# source.								#
#									#
#########################################################################


pkginclude_HEADERS = mge-configfile.h mge-remsyslog.h libmgesysutils.h

